RbA Build/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Astragal__c</fullName>
        <description>The Astragal Color selected for the product.</description>
        <inlineHelpText>The Astragal Color selected for the product.</inlineHelpText>
        <label>Astragal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breather_Tubes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Breather Tubes are needed.</description>
        <inlineHelpText>Checked if Breather Tubes are needed.</inlineHelpText>
        <label>Breather Tubes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brickmould_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if brickmould should be applied to this product.</description>
        <inlineHelpText>Checked if brickmould should be applied to this product.</inlineHelpText>
        <label>Brickmould Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brickmould_Location__c</fullName>
        <description>The Brickmould Location selected for the product.</description>
        <inlineHelpText>The Brickmould Location selected for the product.</inlineHelpText>
        <label>Brickmould Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casing_Location__c</fullName>
        <description>The Casing Location selected for the product.</description>
        <inlineHelpText>The Casing Location selected for the product.</inlineHelpText>
        <label>Casing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casing_Profile__c</fullName>
        <description>The Casing Profile selected for the product.</description>
        <inlineHelpText>The Casing Profile selected for the product.</inlineHelpText>
        <label>Casing Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casing_Species__c</fullName>
        <description>The Casing Species selected for the product.</description>
        <inlineHelpText>The Casing Species selected for the product.</inlineHelpText>
        <label>Casing Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkrail_Style__c</fullName>
        <description>The checkrail style applied to this product.</description>
        <inlineHelpText>The checkrail style applied to this product.</inlineHelpText>
        <label>Checkrail Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High_S1__c</fullName>
        <description>Select the number of grille lites high for colonial grille pattern on sash 1.</description>
        <inlineHelpText>Select the number of grille lites high for colonial grille pattern on sash 1.</inlineHelpText>
        <label>Colonial Grille Lites High S1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_High_S2__c</fullName>
        <description>Select the number of grille lites high for colonial grille pattern on sash 2</description>
        <inlineHelpText>Select the number of grille lites high for colonial grille pattern on sash 2.</inlineHelpText>
        <label>Colonial Grille Lites High S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide_S1__c</fullName>
        <description>Select the number of grille lites wide for colonial grille pattern on sash 1.</description>
        <inlineHelpText>Select the number of grille lites wide for colonial grille pattern on sash 1.</inlineHelpText>
        <label>Colonial Grille Lites Wide S1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonial_Grille_Lites_Wide_S2__c</fullName>
        <description>Select the number of grille lites wide for colonial grille pattern on sash 2.</description>
        <inlineHelpText>Select the number of grille lites wide for colonial grille pattern on sash 2.</inlineHelpText>
        <label>Colonial Grille Lites Wide S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrosion_Resistant_Hardware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this corrosion resistant hardware option has been applied to this product.</description>
        <inlineHelpText>Checked if this corrosion resistant hardware option has been applied to this product.</inlineHelpText>
        <label>Corrosion Resistant Hardware</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_S1__c</fullName>
        <description>Enter details describing the custom grille sold for sash 1.</description>
        <inlineHelpText>Enter details describing the custom grille sold for sash 1.</inlineHelpText>
        <label>Custom Grille Details S1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Grille_Details_S2__c</fullName>
        <description>Enter details describing the custom grille sold for sash 2.</description>
        <inlineHelpText>Enter details describing the custom grille sold for sash 2.</inlineHelpText>
        <label>Custom Grille Details S2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drip_Cap_Pieces__c</fullName>
        <description>The Drip Cap Pieces selected for the product.</description>
        <inlineHelpText>The Drip Cap Pieces selected for the product.</inlineHelpText>
        <label>Drip Cap Pieces</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EJ_Color__c</fullName>
        <description>The EJ Color selected for the product.</description>
        <inlineHelpText>The EJ Color selected for the product.</inlineHelpText>
        <label>EJ Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Frame__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if an EJ Kerf / Full Frame Addition of L&amp;M and PM is needed.</description>
        <inlineHelpText>Checked if an EJ Kerf / Full Frame Addition of L&amp;M and PM is needed.</inlineHelpText>
        <label>EJ Frame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EJ_Species__c</fullName>
        <description>The EJ Species selected for the product.</description>
        <inlineHelpText>The EJ Species selected for the product.</inlineHelpText>
        <label>EJ Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Thickness__c</fullName>
        <description>The EJ Thickness selected for the product.</description>
        <inlineHelpText>The EJ Thickness selected for the product.</inlineHelpText>
        <label>EJ Thickness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EJ_Wall_Depth__c</fullName>
        <description>The EJ Wall Depth selected for the product.</description>
        <inlineHelpText>The EJ Wall Depth selected for the product.</inlineHelpText>
        <label>EJ Wall Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <description>The exterior color of the product</description>
        <inlineHelpText>The exterior color of the product</inlineHelpText>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Grille_Color__c</fullName>
        <description>The Exterior Grille Color selected for the product.</description>
        <inlineHelpText>The Exterior Grille Color selected for the product.</inlineHelpText>
        <label>Exterior Grille Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim_Color__c</fullName>
        <description>The Exterior Trim Color selected for the product.</description>
        <inlineHelpText>The Exterior Trim Color selected for the product.</inlineHelpText>
        <label>Exterior Trim Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Trim__c</fullName>
        <description>The exterior trim option applied to this product.</description>
        <inlineHelpText>The exterior trim option applied to this product.</inlineHelpText>
        <label>Exterior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fibrex_L_Trim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Fibrex L-Trim option is selected for this product.</description>
        <inlineHelpText>Checked if Fibrex L-Trim option is selected for this product.</inlineHelpText>
        <label>Fibrex L-Trim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finger_Lifts__c</fullName>
        <description>The number of extra finger lifts for this product.</description>
        <inlineHelpText>The number of extra finger lifts for this product.</inlineHelpText>
        <label>Finger Lifts</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame_Type__c</fullName>
        <description>The frame type applied to this product.</description>
        <inlineHelpText>The frame type applied to this product.</inlineHelpText>
        <label>Frame Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S1__c</fullName>
        <description>Select the glass pattern for Sash 1.</description>
        <inlineHelpText>Select the glass pattern for Sash 1.</inlineHelpText>
        <label>Glass Pattern S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S2__c</fullName>
        <description>Select the glass pattern for Sash 2.</description>
        <inlineHelpText>Select the glass pattern for Sash 2.</inlineHelpText>
        <label>Glass Pattern S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glass_Pattern_S3__c</fullName>
        <description>Select the glass pattern for Sash 3.</description>
        <inlineHelpText>Select the glass pattern for Sash 3.</inlineHelpText>
        <label>Glass Pattern S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S1__c</fullName>
        <description>Select the glazing for Sash 1.</description>
        <inlineHelpText>Select the glazing for Sash 1.</inlineHelpText>
        <label>Glazing S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S2__c</fullName>
        <description>Select the glazing for Sash 2.</description>
        <inlineHelpText>Select the glazing for Sash 2.</inlineHelpText>
        <label>Glazing S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glazing_S3__c</fullName>
        <description>Select the glazing for Sash 3.</description>
        <inlineHelpText>Select the glazing for Sash 3.</inlineHelpText>
        <label>Glazing S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gliding_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gliding Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_S1__c</fullName>
        <description>Select the grille pattern for Sash 1.</description>
        <inlineHelpText>Select the grille pattern for Sash 1.</inlineHelpText>
        <label>Grille Pattern S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Pattern_S2__c</fullName>
        <description>Select the grille pattern for Sash 2.</description>
        <inlineHelpText>Select the grille pattern for Sash 2.</inlineHelpText>
        <label>Grille Pattern S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grille_Style__c</fullName>
        <description>The grille style selected for this product.</description>
        <inlineHelpText>The grille style selected for this product.</inlineHelpText>
        <label>Grille Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handing__c</fullName>
        <description>Handing refers to the direction a window or door opens.</description>
        <inlineHelpText>Handing refers to the direction a window or door opens.</inlineHelpText>
        <label>Handing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Color__c</fullName>
        <description>The hardware color applied to this product.</description>
        <inlineHelpText>The hardware color applied to this product.</inlineHelpText>
        <label>Hardware Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Finish__c</fullName>
        <description>The hardware finish applied to this product.</description>
        <inlineHelpText>The hardware finish applied to this product.</inlineHelpText>
        <label>Hardware Finish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Option__c</fullName>
        <description>The hardware option selected for this product.</description>
        <inlineHelpText>The hardware option selected for this product.</inlineHelpText>
        <label>Hardware Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Style__c</fullName>
        <description>The hardware style selected for this product.</description>
        <inlineHelpText>The hardware style selected for this product.</inlineHelpText>
        <label>Hardware Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubs__c</fullName>
        <description>The number of hubs selected for the product.</description>
        <inlineHelpText>The number of hubs selected for the product.</inlineHelpText>
        <label>Hubs</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insect_Screen_Style__c</fullName>
        <description>The insect screen style selected for this product.</description>
        <inlineHelpText>The insect screen style selected for this product.</inlineHelpText>
        <label>Insect Screen Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <description>The interior color of the product.</description>
        <inlineHelpText>The interior color of the product.</inlineHelpText>
        <label>Interior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Grille_Color__c</fullName>
        <description>The Interior Grille Color selected for the product.</description>
        <inlineHelpText>The Interior Grille Color selected for the product.</inlineHelpText>
        <label>Interior Grille Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Sash_Color__c</fullName>
        <description>The Interior Sash Color selected for the product.</description>
        <inlineHelpText>The Interior Sash Color selected for the product.</inlineHelpText>
        <label>Interior Sash Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Trim__c</fullName>
        <description>The interior trim selected for the product.</description>
        <inlineHelpText>The interior trim selected for the product.</inlineHelpText>
        <label>Interior Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jamb_Liner_Color__c</fullName>
        <description>The Jamb Liner Color selected for the product.</description>
        <inlineHelpText>The Jamb Liner Color selected for the product.</inlineHelpText>
        <label>Jamb Liner Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifts_Pulls__c</fullName>
        <description>The number of extra lifts/pulls for this product.</description>
        <inlineHelpText>The number of extra lifts/pulls for this product.</inlineHelpText>
        <label>Lifts/Pulls</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locks_Sash__c</fullName>
        <description>The number of extra locks/sash for this product.</description>
        <inlineHelpText>The number of extra locks/sash for this product.</inlineHelpText>
        <label>Locks/Sash</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanently_Applied_Interior_Wood_Grille__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the permanently applied interior wood grille option was selected.</description>
        <inlineHelpText>Checked if the permanently applied interior wood grille option was selected.</inlineHelpText>
        <label>Permanently Applied Interior Wood Grille</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Height_Inches__c</fullName>
        <description>The height of the opening as measured by sales in inches.</description>
        <inlineHelpText>The height of the opening as measured by sales in inches.</inlineHelpText>
        <label>Sales Height Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Width_Inches__c</fullName>
        <description>The width of the opening as measured by sales in inches.</description>
        <inlineHelpText>The width of the opening as measured by sales in inches.</inlineHelpText>
        <label>Sales Width Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sash_Operation__c</fullName>
        <description>The Sash Operation selected for the product.</description>
        <inlineHelpText>The Sash Operation selected for the product.</inlineHelpText>
        <label>Sash Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <description>The Sash Ratio selected for the product.</description>
        <inlineHelpText>The Sash Ratio selected for the product.</inlineHelpText>
        <label>Sash Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Color__c</fullName>
        <description>The Screen Color selected for the product.</description>
        <inlineHelpText>The Screen Color selected for the product.</inlineHelpText>
        <label>Screen Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <description>The screen type applied to the selected product.</description>
        <inlineHelpText>The screen type applied to the selected product.</inlineHelpText>
        <label>Screen Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_Vaneer_Type__c</fullName>
        <description>The screen vaneer type applied to this product.</description>
        <inlineHelpText>The screen vaneer type applied to this product.</inlineHelpText>
        <label>Screen Vaneer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spokes__c</fullName>
        <description>The number of spokes selected for the product.</description>
        <inlineHelpText>The number of spokes selected for the product.</inlineHelpText>
        <label>Spokes</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this particular product qualifies for a tax credit.</description>
        <inlineHelpText>Check if this particular product qualifies for a tax credit.</inlineHelpText>
        <label>Tax Credit Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 1 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 1 of this product is tempered.</inlineHelpText>
        <label>Tempered S1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 2 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 2 of this product is tempered.</inlineHelpText>
        <label>Tempered S2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tempered_S3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the glass for Sash 3 of this product is tempered.</description>
        <inlineHelpText>Checked if the glass for Sash 3 of this product is tempered.</inlineHelpText>
        <label>Tempered S3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <description>The number used to identify the opening(window or door) location for this product</description>
        <inlineHelpText>The number used to identify the opening(window or door) location for this product</inlineHelpText>
        <label>Unit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wide_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the wide Bar grille option was selected.</description>
        <inlineHelpText>Checked if the wide Bar grille option was selected.</inlineHelpText>
        <label>Wide Bar</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>